maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: not found: value NORTH
    if (getDirection() == NORTH) {
                          ^